--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
     <title>sprint3</title>
 </head>
 <body>
@@ -12,7 +14,8 @@
 
 
     <script src="lib/vue.js"></script>  
-    <script src="lib/vue-routering.js"></script>  
+    <script src="lib/vue-routering.js"></script> 
+    <script src="https://kit.fontawesome.com/e17fc92878.js" crossorigin="anonymous"></script> 
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
