--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://kit.fontawesome.com/e17fc92878.js" crossorigin="anonymous"></script> 
     <script src="lib/vue-routering.js"></script>  
     <script src="lib/axios.js"></script>  
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
